# SurrealMUSH

./: .env.example  .gitignore  compose.yml  convergence.py  localhost.cnf  makekey.sh  nginx.conf  pyproject.toml  requirements.txt
mush/api/v1/: __init__.py  boards.py  pcs.py  utils.py
mush/portal/telnet/: __init__.py  parser.py  protocol.py
mush/shared/models/: fields.py  mixins.py  users.py  validators.py
schema/: api.surql  data.surql
static/: hello.txt
