[project]
name = "surrealmush"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "orjson",
    "rich",
    "dynaconf",
    "pydantic[email]"
    "loguru",
    "pyjwt",
    "fastapi[standard]",
    "hypercorn[h2]",
    "httpx[http2]",
    "httpx-sse",
    "lark"
]
#scripts = { muforge = "muforge.launcher:main" }
